[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools-scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "Cumulocity/_version.py"

[project]
name = "robotframework-c8y"
description = "Robot Framework library for Cumulocity IoT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["CumulocityIoT", "testing"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "robotframework >= 6.0.0, < 8.0.0",
  "python-dotenv >= 1.0.0, < 1.1.0",
  "dotmap >= 1.3.30, < 1.4.0",
  "c8y-test-core @ git+https://github.com/reubenmiller/c8y-test-core.git@0.26.0#egg=c8y-test-core",
]
